--- a/cat-clicker/index.html
+++ b/cat-clicker/index.html
@@ -14,15 +14,31 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Logo</a>
+                <a href="#" class="brand-logo">Cat Clicker</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="sass.html">Sass</a></li>
-                    <li><a href="badges.html">Components</a></li>
-                    <li><a href="collapsible.html">JavaScript</a></li>
+                    <li><a>Udacity Advanced Front-End Nanodegree</a></li>
+                    <li><a href="https://www.linkedin.com/in/natacha-romano/" target="_blank">My LinkedIn</a></li>
                 </ul>
             </div>
         </nav>
     </header>
+    <main>
+        <div class="main-content">
+            <a id="catButtonOne" class="waves-effect waves-light btn-small">Luna</a>
+            <a id="catButtonTwo" class="waves-effect waves-light btn-small">Fred</a>
+            <a id="catButtonThree" class="waves-effect waves-light btn-small">Mike</a>
+            <a id="catButtonFour" class="waves-effect waves-light btn-small">Frida</a>
+            <a id="catButtonFive" class="waves-effect waves-light btn-small">Venus</a>
+            <div id="image-container">
+                <div id="catTitle"></div>
+                <div id="catCount"></div>
+                <img id="catImage" src="" />
+            </div>
+            <!-- <h3>Click on the kitten picture!</h3> -->
+            <!-- <img id="kitten" class="main-content__image" src="kitten.jpg" alt="cute kitten"> -->
+            <!-- <h4 id="counter" class="main-content__number">2</h4> -->
+        </div>
+    </main>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="app.js"></script>
