--- a/cat-clicker/index.html
+++ b/cat-clicker/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Cat Clicker</a>
+                <a href="#" class="brand-logo">Kitten Clicker</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a>Udacity Advanced Front-End Nanodegree</a></li>
                     <li><a href="https://www.linkedin.com/in/natacha-romano/" target="_blank">My LinkedIn</a></li>
@@ -24,23 +24,22 @@
     </header>
     <main>
         <div class="main-content">
-            <a id="catButtonOne" class="waves-effect waves-light btn-small">Luna</a>
+            <ul id="cat-list"></ul>
+            <!-- <a id="catButtonOne" class="waves-effect waves-light btn-small">Luna</a>
             <a id="catButtonTwo" class="waves-effect waves-light btn-small">Fred</a>
             <a id="catButtonThree" class="waves-effect waves-light btn-small">Mike</a>
             <a id="catButtonFour" class="waves-effect waves-light btn-small">Frida</a>
-            <a id="catButtonFive" class="waves-effect waves-light btn-small">Venus</a>
-            <div id="image-container">
-                <div id="catTitle"></div>
-                <div id="catCount"></div>
-                <img id="catImage" src="" />
+            <a id="catButtonFive" class="waves-effect waves-light btn-small">Venus</a> -->
+            <div id="cat">
+                <div id="cat-name"></div>
+                <div id="cat-count"></div>
+                <img id="cat-img" src="" alt="cute kitten" />
             </div>
             <!-- <h3>Click on the kitten picture!</h3> -->
             <!-- <img id="kitten" class="main-content__image" src="kitten.jpg" alt="cute kitten"> -->
             <!-- <h4 id="counter" class="main-content__number">2</h4> -->
         </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 
