creating the admin btton and form

--- a/cat-clicker/index.html
+++ b/cat-clicker/index.html
@@ -31,6 +31,31 @@
                 <img id="cat-img" src="" alt="cute cat">
             </div>
             <h3>Click on the kitten picture!</h3>
+            <button class="btn waves-effect waves-light" type="submit" name="action">Admin
+            </button>
+            <div id="admin-form" class="row">
+                <form class="col s12">
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <label for="name"></label>
+                            <input placeholder="name" id="name" type="text" class="validate">
+                        </div>
+                        <div class="input-field col s6">
+                            <label for="clicks"></label>
+                            <input placeholder="#clicks" id="clicks" type="text" class="validate">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <label for="image-url"></label>
+                            <input placeholder="url of the image" id="image-url" type="text" class="validate">
+                        </div>
+                    </div>
+                    <a class="waves-effect waves-light btn">Cancel</a>
+                    <a class="waves-effect waves-light btn">Submit</a>
+                </form>
+            </div>
+
         </div>
     </main>
     <script src="app.js"></script>
